Fixed color scheme accessibility issue for dark mode

--- a/src/scss/components/_intro.scss
+++ b/src/scss/components/_intro.scss
@@ -1,6 +1,6 @@
 .intro {
   // background: var(--color-theme-highlight-block);
-  @include horizontal-gradient(var(--color-theme-highlight-block), white);
+  @include horizontal-gradient(var(--color-theme-highlight-block), var(--color-theme-highlight-gradient));
 
   &__summary {
     --flow-space: #{get-size(500)};
